Fixed z-index on mobile header buttons

--- a/public/style.scss
+++ b/public/style.scss
@@ -404,6 +404,7 @@ nav.navbar li {
 }
 
 .react-search-field {
+    z-index: 9999999;
     position: absolute;
     top: 0;
     right: 0;
